Fix whitespace; correct license

--- a/fb-buttons.css
+++ b/fb-buttons.css
@@ -1,28 +1,28 @@
 /* ------------------------------------------
 CSS3 FACEBOOK-STYLE BUTTONS (Nicolas Gallagher)
-Licensed under Unlicense
+MIT License
 http://github.com/necolas/css3-facebook-buttons
 ------------------------------------------ */
 
 
 /* ------------------------------------------------------------------------------------------------------------- BUTTON */
 
-.uibutton { 
-    position: relative; 
+.uibutton {
+    position: relative;
     z-index: 1;
-    overflow: visible; 
-    display: inline-block; 
-    padding: 0.3em 0.6em 0.375em; 
-    border: 1px solid #999; 
+    overflow: visible;
+    display: inline-block;
+    padding: 0.3em 0.6em 0.375em;
+    border: 1px solid #999;
     border-bottom-color: #888;
     margin: 0;
-    text-decoration: none; 
+    text-decoration: none;
     text-align: center;
-    font: bold 11px/normal 'lucida grande', tahoma, verdana, arial, sans-serif; 
-    white-space: nowrap; 
-    cursor: pointer; 
+    font: bold 11px/normal 'lucida grande', tahoma, verdana, arial, sans-serif;
+    white-space: nowrap;
+    cursor: pointer;
     /* outline: none; */
-    color: #333; 
+    color: #333;
     background-color: #eee;
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f5f6f6), to(#e4e4e3));
     background-image: -moz-linear-gradient(#f5f6f6, #e4e4e3);
@@ -33,8 +33,8 @@ http://github.com/necolas/css3-facebook-buttons
     -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1), inset 0 1px 0 #fff;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1), inset 0 1px 0 #fff;
     /* IE hacks */
-    zoom: 1; 
-    *display: inline; 
+    zoom: 1;
+    *display: inline;
 }
 
 .uibutton:hover,
@@ -62,12 +62,12 @@ http://github.com/necolas/css3-facebook-buttons
 
 .uibutton.icon:before {
     content: "";
-    position: relative; 
-    top: 1px; 
+    position: relative;
+    top: 1px;
     float:left;
-    width: 10px; 
-    height: 12px; 
-    margin: 0 0.5em 0 0; 
+    width: 10px;
+    height: 12px;
+    margin: 0 0.5em 0 0;
     background: url(fb-icons.png) 99px 99px no-repeat;
 }
 
@@ -173,8 +173,8 @@ http://github.com/necolas/css3-facebook-buttons
     padding: 0;
     margin: 0;
     /* IE hacks */
-    zoom: 1; 
-    *display: inline; 
+    zoom: 1;
+    *display: inline;
 }
 
 .uibutton + .uibutton,
@@ -192,7 +192,7 @@ http://github.com/necolas/css3-facebook-buttons
 
 .uibutton-group .uibutton {
     float: left;
-    margin-left: -1px; 
+    margin-left: -1px;
 }
 
 .uibutton-group .uibutton:hover,
@@ -202,8 +202,8 @@ http://github.com/necolas/css3-facebook-buttons
 }
 
 .uibutton-group > .uibutton:first-child,
-.uibutton-group li:first-child .uibutton { 
-    margin-left: 0; 
+.uibutton-group li:first-child .uibutton {
+    margin-left: 0;
 }
 
 /* ------------------------------------------------------------------------------------------------------------- BUTTON CONTAINER */
